--- a/Assignment7/Assignment7.csproj
+++ b/Assignment7/Assignment7.csproj
@@ -1,9 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
-
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <DisableBuildCompression>true</DisableBuildCompression>
+    <DisablePublishCompression>true</DisablePublishCompression>
+    <EnableDefaultCompressedItems>false</EnableDefaultCompressedItems>
+    <DisableStaticWebAssetsBuildPropsFileGeneration>true</DisableStaticWebAssetsBuildPropsFileGeneration>
   </PropertyGroup>
-
 </Project>
